header image in top center; menu in top, centered

--- a/custom_style.css
+++ b/custom_style.css
@@ -1,2 +1,2 @@
-body{font-family:'Lato', sans-serif;font-weight:300}h1,h2,h3,h4,h5,h6{font-family:"Josefin Sans", sans-serif}
+body{font-family:'Lato', sans-serif;font-weight:300}h1,h2,h3,h4,h5,h6{font-family:"Josefin Sans", sans-serif}.site-header{background-color:white}.site-header .wrap .title-area{float:none;margin:0 auto;min-height:170px;width:400px}.site-header .wrap .title-area .site-title a{min-height:170px}.site-header .wrap .widget-area{float:none;text-align:center;width:100%}.site-header .wrap .widget-area .search-form{width:30%}
 /*# sourceMappingURL=custom_style.css.map */
