--- a/sass/custom_style.css.scss
+++ b/sass/custom_style.css.scss
@@ -28,6 +28,7 @@ h1, h2, h3, h4, h5, h6 {
 .site-header {
   background-color: white;
   .wrap {
+    padding: 10px 0;
     .title-area {
       float: none;
       margin: 0 auto;
