show image on first post second page and on

--- a/sass/custom_style.css.scss
+++ b/sass/custom_style.css.scss
@@ -62,7 +62,7 @@ main {
     &:first-child {
       padding-top: 0;
       .attachment-excerpt-thumbnail {
-        display: none;
+        // display: none;
       }
       h1.entry-title {
         font-size: 36px;
