--- a/sass/custom_style.css.scss
+++ b/sass/custom_style.css.scss
@@ -6,28 +6,22 @@ $lighter-grey: rgba(189, 195, 199, 0.5);
 $lightest-grey: rgba(189, 195, 199, 0.1);
 $basic-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.26);
 $bigger-box-shadow: 0 4px 7px 0 rgba(0, 0, 0, 0.2);
-
 $teal: rgba(116, 169, 164, 1);
 $lighter-teal: rgba(162, 186, 182, 1);
 $lightest-teal: rgba(215, 235, 233, 1);
-
 $off-black: rgba(0, 0, 47, 1);
-
 $navy: rgba(12, 25, 65, 1);
 $lighter-navy: rgba(15, 35, 67, 1);
-
 $coral: rgba(255, 133, 129, 1);
 $taupe: rgba(179, 163, 147, 1);
-
 $darkest-gray: rgba(101, 101, 101, 1);
 $gray: rgba(174, 174, 176, 1);
 $gray-taupe: rgba(169, 169, 169, 1);
 $gray-teal: rgba(205, 215, 214, 1);
-
 $default-link-color: $coral;
 $secondary-link-color: $teal;
-
 $sidebar-background: #f8f8f8;
+$border-color: #f4f4f4;
 
 @mixin basic-transition($seconds) {
   transition: box-shadow $seconds cubic-bezier(0.4, 0, 0.2, 1);
@@ -54,8 +48,16 @@ a {
   color: $default-link-color; 
 }
 
+input[type="submit"] {
+  background-color: $navy;
+}
+
 input:hover[type="submit"], .button:hover {
   background-color: $default-link-color;
+}
+
+.form-allowed-tags {
+  display: none;
 }
 
 .site-header {
@@ -174,11 +176,20 @@ main {
     .entry-footer {
       .entry-meta {
         border-top: 0;
-        border-bottom: 2px solid #f5f5f5;
+        border-bottom: 2px solid $border-color;
         padding-bottom: 15px;
         padding-top: 0;
       }
     }
+  }
+  .entry-comments {
+    margin-bottom: 0px;
+    .comment {
+      background-color: $sidebar-background;
+    }
+  }
+  .comment-respond {
+    padding-top: 0px;
   }
 }
 
@@ -200,7 +211,7 @@ main {
       border: 0;
       width: 100%;
       &:hover {
-        background-color: $secondary-link-color;
+        background-color: $default-link-color;
         color: white;
       }
     }
@@ -218,7 +229,7 @@ main {
       padding: 20px;
       ul {
         li {
-          border-bottom: 1px solid #f5f5f5;
+          border-bottom: 1px solid $border-color;
         }
       }
     }
@@ -232,6 +243,7 @@ main {
 }
 
 .archive-pagination {
+  margin-top: 0;
   padding: 0 40px;
   li {
     &.active {
@@ -253,7 +265,7 @@ main {
 
 .footer-widgets {
   .button, input[type="submit"] {
-    background-color: $secondary-link-color;
+    background-color: $default-link-color;
   }
 }
 
@@ -297,7 +309,9 @@ main {
       padding: 0;
       text-align: center;
       .archive-title {
+        border-bottom: 2px solid $border-color;
         font-size: 36px;
+        padding-bottom: 15px;
       }
     }
     article {
