--- a/sass/custom_style.css.scss
+++ b/sass/custom_style.css.scss
@@ -238,8 +238,8 @@ main {
 
 // sidebar widget extra
 #subscribe-email input {
-  padding: 16px;
-  width: 100%;
+  padding: 16px !important;
+  width: 100% !important;
 }
 
 .archive-pagination {
