fix monthly archives in functions

--- a/sass/custom_style.css.scss
+++ b/sass/custom_style.css.scss
@@ -238,6 +238,7 @@ main {
 
 // sidebar widget extra
 #subscribe-email input {
+  border-color: $navy !important;
   padding: 16px !important;
   width: 100% !important;
 }
