--- a/sass/custom_style.css.scss
+++ b/sass/custom_style.css.scss
@@ -36,6 +36,11 @@ $border-color: #f4f4f4;
   transition-delay: $seconds;
 }
 
+// for troubleshooting layout issues
+// * {
+//   border: 1px solid black;
+// }
+
 // Basics (Typography, headers)
 html {
 }
@@ -67,6 +72,64 @@ input:hover[type="submit"], .button:hover {
 .form-allowed-tags {
   display: none;
 }
+
+
+/* Utility Bar
+--------------------------------------------- */
+
+.utility-bar {
+  color: #ddd;
+  font-size: 12px;
+  font-size: 1.2rem;
+  padding: 10px 0;
+}
+
+.utility-bar a {
+  color: #ccff33;
+}
+
+.utility-bar a:hover {
+  text-decoration: underline;
+}
+
+.utility-bar-left,
+.utility-bar-right {
+  width: 50%;
+}
+
+.utility-bar-left p,
+.utility-bar-right p {
+  margin-bottom: 0;
+}
+
+.utility-bar-left {
+  float: left;
+}
+
+.utility-bar-right {
+  float: right;
+  text-align: right;
+}
+
+.utility-bar input[type="search"] {
+  border-color: $navy;
+  display: none;
+  font-size: 16px;
+  -webkit-appearance: none;
+}
+
+@media only screen and (max-width: 960px) {
+  .utility-bar-left,
+  .utility-bar-right {
+    width: 100%;
+  }
+
+  .utility-bar input[type="search"] {
+    display: block;
+  }
+}
+// END utility bar
+
 
 .site-header {
   background-color: white;
@@ -213,11 +276,11 @@ main {
     input[type="search"] {
       border-color: $navy;
       font-size: 16px;
+      -webkit-appearance: none;
     }
     button, input[type="submit"] {
       background-color: $navy;
       border: 0;
-      width: 100%;
       &:hover {
         background-color: $default-link-color;
         color: white;
