--- a/sass/custom_style.css.scss
+++ b/sass/custom_style.css.scss
@@ -73,9 +73,7 @@ input:hover[type="submit"], .button:hover {
   display: none;
 }
 
-
-/* Utility Bar
---------------------------------------------- */
+// Utility Bar
 
 .utility-bar {
   color: #ddd;
@@ -85,7 +83,7 @@ input:hover[type="submit"], .button:hover {
 }
 
 .utility-bar a {
-  color: #ccff33;
+  color: $default-link-color;
 }
 
 .utility-bar a:hover {
@@ -281,9 +279,15 @@ main {
     button, input[type="submit"] {
       background-color: $navy;
       border: 0;
+      // width: 100%;
       &:hover {
         background-color: $default-link-color;
         color: white;
+      }
+    }
+    &.jetpack_subscription_widget {
+      input[type="submit"] {
+        width: 100%;
       }
     }
     &.enews-widget {
@@ -315,7 +319,7 @@ main {
 }
 
 .archive-pagination {
-  margin-top: 0;
+  margin-top: 10px;
   padding: 0 40px;
   li {
     &.active {
@@ -374,7 +378,7 @@ main {
 
 // archives
 
-.archive {
+.archive, .search {
   main {
     .archive-description {
       margin: 0;
@@ -424,12 +428,5 @@ main {
         padding-bottom: 15px;
       }
     }
-    // article {
-    //   &:first-child {
-    //     img {
-    //       display: none;
-    //     }
-    //   }
-    // }
   }
 }
