--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 /* # Gusto - Genesis Child Theme  
-Theme Name: Gusto 
+Theme Name: Gusto
 Theme URI: http://www.gustorequired.com/   
 Description: This is a child theme created for the Genesis Framework.   
 Author: John Keith  
 Author URI: http://www.gustorequired.com/  
 Template: genesis  
-Template Version: 2.1.2  
+Template Version: 2.2.2 
+Version:      1.0.2 
 Tags: food, visual-archive, navy, coral, white, one-column, two-columns, three-columns, left-sidebar, right-sidebar, responsive-layout, custom-menu, full-width-template, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready  
 License: GPL-2.0+  
 License URI: http://www.gnu.org/licenses/gpl-2.0.html  
