--- a/sass/custom_style.css.scss
+++ b/sass/custom_style.css.scss
@@ -318,6 +318,7 @@ main {
   width: 100% !important;
 }
 
+// pagination
 .archive-pagination {
   margin-top: 10px;
   padding: 0 40px;
@@ -336,6 +337,13 @@ main {
         color: white;
       }
     }
+  }
+}
+
+@media only screen and (max-width: 960px) {
+  .archive-pagination {
+    padding: 0;
+    text-align: center;
   }
 }
 
