add full utility bar section above left and right sections

--- a/sass/custom_style.css.scss
+++ b/sass/custom_style.css.scss
@@ -100,6 +100,11 @@ input:hover[type="submit"], .button:hover {
   margin-bottom: 0;
 }
 
+.utility-bar-full {
+  display: block;
+  text-align: center;
+}
+
 .utility-bar-left {
   float: left;
 }
